Update the test suite for issue #1

--- a/test/includes/head.pug
+++ b/test/includes/head.pug
@@ -1,4 +1,4 @@
-// main: ../index.pug
+//- main: ../index.pug
 head
     title Pug Autocompile plugin for Atom
     link(href='/assets/css/main.css')
