--- a/spec/fixtures/includes/head.pug
+++ b/spec/fixtures/includes/head.pug
@@ -1,4 +1,4 @@
 //- main: ../index.pug
 head
-    title Pug Autocompile plugin for Atom
-    link(href='/assets/css/main.css')
+    title Demo
+    link(href="/assets/css/main.css")
